--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
 		"postcss-preset-env": "^10.0.9",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwind-scrollbar": "^3.1.0",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.0.0",
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
 		"@neodrag/svelte": "^2.0.6",
-		"tailwind-scrollbar": "^3.1.0"
+		"clsx": "^2.1.1",
+		"tailwind-merge": "^2.5.5"
 	}
 }
