--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 	"dependencies": {
 		"@neodrag/svelte": "^2.0.6",
 		"clsx": "^2.1.1",
+		"svelte-inview": "^4.0.4",
+		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^2.5.5"
 	}
 }
