--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"dependencies": {
 		"@neodrag/svelte": "^2.0.6",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"svelte-inview": "^4.0.4",
 		"svelte-motion": "^0.12.2",
