--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"clsx": "^2.1.1",
 		"svelte-inview": "^4.0.4",
 		"svelte-motion": "^0.12.2",
-		"tailwind-merge": "^2.5.5"
+		"tailwind-merge": "^2.5.5",
+		"uuid": "^11.0.3"
 	}
 }
