--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@neodrag/svelte": "^2.0.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.468.0",
 		"svelte-inview": "^4.0.4",
 		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^2.5.5",
